--- a/public/about.html
+++ b/public/about.html
@@ -321,19 +321,19 @@
             <div class="scroll-snap">
                 <div class="what-is-ascan__listing scroll-snap__elements">
                     <div class="what-is-card">
-    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="pointer">
+    <div class="what-is-card__image" data-lottie-renderer="canvas" data-lottie-alternate="false"  data-lottie-name="pointer">
         <!--<img src="" alt="">-->
     </div>
     <h4 class="what-is-card__title">Free Education</h4>
     <p class="what-is-card__content">Our core principle is that knowledge and information should be free and accessible to everyone</p>
 </div><div class="what-is-card">
-    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="hands">
+    <div class="what-is-card__image" data-lottie-renderer="svg" data-lottie-alternate="false"  data-lottie-name="hands">
         <!--<img src="" alt="">-->
     </div>
     <h4 class="what-is-card__title">Inclusivity</h4>
     <p class="what-is-card__content">We want to give everyone interested a fair opportunity to take part in Web3 and NFTs</p>
 </div><div class="what-is-card">
-    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="faces">
+    <div class="what-is-card__image" data-lottie-renderer="canvas" data-lottie-alternate="false"  data-lottie-name="faces">
         <!--<img src="" alt="">-->
     </div>
     <h4 class="what-is-card__title">Community</h4>
