--- a/public/index.html
+++ b/public/index.html
@@ -2150,19 +2150,19 @@
             <div class="scroll-snap">
                 <div class="what-is-ascan__listing scroll-snap__elements">
                     <div class="what-is-card">
-    <div class="what-is-card__image" data-lottie-alternate="true"  data-lottie-name="chest">
+    <div class="what-is-card__image" data-lottie-renderer="canvas" data-lottie-alternate="true"  data-lottie-name="chest">
         <!--<img src="" alt="">-->
     </div>
     <h4 class="what-is-card__title">Get into NFT’s Easy</h4>
     <p class="what-is-card__content">No more endless videos, blogs and scrolling through information on loaded and complicated websites</p>
 </div><div class="what-is-card">
-    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="rocket">
+    <div class="what-is-card__image" data-lottie-renderer="canvas" data-lottie-alternate="false"  data-lottie-name="rocket">
         <!--<img src="" alt="">-->
     </div>
     <h4 class="what-is-card__title">Step by Step Guide</h4>
     <p class="what-is-card__content">Our training is designed to guide you safely through every step to be prepared for getting your first NFT</p>
 </div><div class="what-is-card">
-    <div class="what-is-card__image" data-lottie-alternate="false"  data-lottie-name="flag">
+    <div class="what-is-card__image" data-lottie-renderer="canvas" data-lottie-alternate="false"  data-lottie-name="flag">
         <!--<img src="" alt="">-->
     </div>
     <h4 class="what-is-card__title">NFT as Reward</h4>
