Animation and new mint page

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
             </ul>
 </nav>        <div class="mobile-menu__actions">
             <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+<b>Notice</b>:  Undefined variable: btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
 "
    class="btn btn-primary">
     <span class="value">Try for free</span>
@@ -248,7 +248,7 @@
                 </h1>
                 <div class="hero__actions">
                     <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+<b>Notice</b>:  Undefined variable: btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
 "
    class="btn btn-primary">
     <span class="value">Start education</span>
@@ -3217,7 +3217,7 @@
                 pictures
             </h3>
             <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+<b>Notice</b>:  Undefined variable: btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
 "
    class="btn btn-primary">
     <span class="value">Start education</span>
@@ -5251,12 +5251,12 @@
                     move safely in the NFT Space and Discover the world of web3. You will be</p>
                 <div class="benefits__actions">
                     <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+<b>Notice</b>:  Undefined variable: btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
 "
    class="btn btn-primary">
     <span class="value">Launch Training</span>
 </a>                    <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+<b>Notice</b>:  Undefined variable: btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
 "
    class="btn btn-tertiary">
     <span class="value">Discover WEB3</span>
@@ -7433,6 +7433,11 @@
 
     <symbol id="arrow" viewBox="0 0 28 16" fill="none">
         <path d="M0.292891 7.29289C-0.0976333 7.68342 -0.0976334 8.31658 0.29289 8.7071L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34314C8.46159 1.95262 8.46159 1.31945 8.07107 0.92893C7.68054 0.538406 7.04738 0.538406 6.65685 0.92893L0.292891 7.29289ZM28 7L0.999998 7L0.999998 9L28 9L28 7Z"
+              fill="currentColor"/>
+    </symbol>
+
+    <symbol id="arrow-short" viewBox="0 0 17 16" fill="none">
+        <path d="M16.7071 8.70711C17.0976 8.31658 17.0976 7.68342 16.7071 7.29289L10.3431 0.928933C9.95262 0.538409 9.31946 0.538409 8.92893 0.928933C8.53841 1.31946 8.53841 1.95262 8.92893 2.34315L14.5858 8L8.92893 13.6569C8.53841 14.0474 8.53841 14.6805 8.92893 15.0711C9.31946 15.4616 9.95262 15.4616 10.3431 15.0711L16.7071 8.70711ZM-8.74228e-08 9L16 9L16 7L8.74228e-08 7L-8.74228e-08 9Z"
               fill="currentColor"/>
     </symbol>
 
