--- a/public/support.html
+++ b/public/support.html
@@ -202,7 +202,7 @@
             </ul>
 </nav>        <div class="mobile-menu__actions">
             <a href="<br />
-<b>Warning</b>:  Undefined variable $btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
+<b>Notice</b>:  Undefined variable: btn_url in <b>/Users/ikoshele/Sites/ascan/public/template-parts/includes/button.php</b> on line <b>1</b><br />
 "
    class="btn btn-primary">
     <span class="value">Try for free</span>
@@ -549,6 +549,9 @@
             </nav>
         </div>
     </div>
+    <div class="footer-lottie">
+
+    </div>
 </footer>
 </div>
 
@@ -572,6 +575,16 @@
               fill="currentColor" stroke="currentColor" stroke-width="0.2"/>
         <path d="M10 6.25C7.93229 6.25 6.25 7.93229 6.25 10C6.25 12.0677 7.93229 13.75 10 13.75C12.0677 13.75 13.75 12.0677 13.75 10C13.75 7.93229 12.0677 6.25 10 6.25ZM10 12.5C8.62145 12.5 7.50002 11.3785 7.50002 10C7.50002 8.62149 8.62149 7.50002 10 7.50002C11.3785 7.50002 12.5 8.62149 12.5 10C12.5 11.3785 11.3785 12.5 10 12.5Z"
               fill="currentColor" stroke="currentColor" stroke-width="0.2"/>
+    </symbol>
+
+    <symbol id="arrow" viewBox="0 0 28 16" fill="none">
+        <path d="M0.292891 7.29289C-0.0976333 7.68342 -0.0976334 8.31658 0.29289 8.7071L6.65685 15.0711C7.04738 15.4616 7.68054 15.4616 8.07107 15.0711C8.46159 14.6805 8.46159 14.0474 8.07107 13.6569L2.41421 8L8.07107 2.34314C8.46159 1.95262 8.46159 1.31945 8.07107 0.92893C7.68054 0.538406 7.04738 0.538406 6.65685 0.92893L0.292891 7.29289ZM28 7L0.999998 7L0.999998 9L28 9L28 7Z"
+              fill="currentColor"/>
+    </symbol>
+
+    <symbol id="arrow-short" viewBox="0 0 17 16" fill="none">
+        <path d="M16.7071 8.70711C17.0976 8.31658 17.0976 7.68342 16.7071 7.29289L10.3431 0.928933C9.95262 0.538409 9.31946 0.538409 8.92893 0.928933C8.53841 1.31946 8.53841 1.95262 8.92893 2.34315L14.5858 8L8.92893 13.6569C8.53841 14.0474 8.53841 14.6805 8.92893 15.0711C9.31946 15.4616 9.95262 15.4616 10.3431 15.0711L16.7071 8.70711ZM-8.74228e-08 9L16 9L16 7L8.74228e-08 7L-8.74228e-08 9Z"
+              fill="currentColor"/>
     </symbol>
 
 
